# lazy_blacktea

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_zh-TW.md  VERSION  lazy_blacktea_pyqt.py  logcat_viewer.py  main.py  pyproject.toml  refactor_error_handling.py  requirements.txt  start_lazy_blacktea.sh  test_bug_report_fix.py  test_comprehensive_bug_report.py  test_device_display_fix.py  test_device_list_performance.py  test_dialog_reduction.py  test_fix_verification.py  test_manufacturer_bug_report.py  test_quick_verification.py
.github/: README.md
build-scripts/: README.md  build.py  build_linux.sh  build_linux.spec  build_macos.sh  build_macos.spec
build_scripts/: __init__.py  native_support.py  spec_utils.py
config/: config_manager.py  constants.py
docs/: UI_IMPROVEMENTS_SUMMARY.md  UI_UX_IMPROVEMENTS.md  architecture.md  deployment.md  quickstart.md  ux-logic-audit-progress.md
modules/: __init__.py
native_lbb/: AGENTS.md  Cargo.toml
scripts/: bump_version.py
tests/: AGENTS.md  README.md  __init__.py  refactoring_baseline.json  refactoring_framework.py  run_tests.py  test_a11y_device_row.py  test_adb_tools_dcim_pull.py  test_all_functions.py  test_android_version_parse.py  test_apk_install.py  test_apk_progress_dialog_busy.py  test_app_action_results.py  test_app_list_parsing.py  test_app_list_version_display.py  test_app_management_refactor.py  test_app_shell.py  test_app_shell_phase3.py  test_application_version.py  test_async_device_performance.py  test_bug_report_cancel.py  (+126 more)
(+163 files in other folders)
