[project]
name = "lazy-blacktea"
version = "0.0.43"
description = "A PyQt6 GUI application for simplifying Android ADB and automation tasks"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{ name = "cy76" }]
dependencies = [
    "pyqt6>=6.10.1",
]

[project.scripts]
lazy-blacktea = "lazy_blacktea_pyqt:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
]
